--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
             </div>
         </section>
         <section class="warGraphic">
-            <div class="">
+            <div class="RPG">
+                <h2 class="quote">We'll blow away the competition ~Anonimus</h2>
+                
+                <img class="RPGGraphic" src="https://64.media.tumblr.com/0219d98ff7588af2ec8b1353bdd0e56b/tumblr_nh5pspK6YU1sh9aw0o1_1280.gifv" alt="cartoon soldier shooting an RPG">
 
+                <img class="bear" src="https://ae01.alicdn.com/kf/HTB1uRnIhZuYBuNkSmRyq6AA3pXan/30-40-cm-Funny-Animal-Dolls-Adorable-Baby-Meddy-Teddy-Yoga-Bears-Reshape-Cartilage-Bear-Child.jpg_Q90.jpg_.webp" alt="toy bear meditating">
             </div>
         </section>
         <section class="meditationTips">
