--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             </div>
         </section>
         <section class="centerImage">
-            <div class="">
 
-            </div>
-        </section><section class="links">
+            <img class="resize" src="https://i.pinimg.com/originals/43/7c/cd/437ccd700660fc3ac5a164dffb4c290f.jpg" alt="Groovy person">
+
+        </section>
+        <section class="links">
             <div class="">
 
             </div>
