Wavy text didnt work so went back to original

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </div>
         </section>
         <section class="meditationTips">
-            <div class="">
+            <div class="Tips">
+                
 
             </div>
         </section>
