--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
             </div>
         </section>
         <section class="meditationTips">
-            <div class="">
+            <div class="Tips">
+                <ul>
+                    <li>"Always choose the most crowded place."</li>
+            
+                </ul>
 
             </div>
         </section>
