add a new css file for the tips

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
         <section class="meditationTips">
             <div class="Tips">
                 <ul>
-                    <li>"Always choose the most crowded place."</li>
-            
+                    <li>Always choose the most crowded place.</li>
+                    <li>The best time is usually right after your kids come home from school or just wake up from a nap.</li>
+                    <li>Jeans are absolutely mandatory to find the best position to sit in.</li>
+                    <li>Eat a huge lunch from Taco Bell and a large coffee from Dunkin Donuts.</li>
                 </ul>
 
             </div>
