Image Resized/Links added

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
             </div>
         </section>
         <section class="centerImage">
-
+            <div class="groovy">
             <img class="resize" src="https://i.pinimg.com/originals/43/7c/cd/437ccd700660fc3ac5a164dffb4c290f.jpg" alt="Groovy person">
-
-        </section>
-        <section class="links">
-            <div class="">
-
+                <article class="links">
+                    <h5 class= "tastyTitle"><em>Here are some tasty jams to get your mind right!</em></h5>
+                        <ol class="tastyJams">
+                          <a href="https://www.youtube.com/watch?v=Az4UgLwAw4c" target="_blank" rel="noopener noreferrer"> Superior Meditation!</a><br>
+                          <a href="https://www.youtube.com/watch?v=xHE5g9YgkFg" target="_blank" rel="noopener noreferrer"> Stop Mental bReAkDoWnZ!</a><br>
+                          <a href="https://www.youtube.com/watch?v=EYtFH2bFCfg" target="_blank" rel="noopener noreferrer"> 10 Out Of 10 Restfulness!</a>
+                        </ol>
+                    </article>
             </div>
         </section>
         <section class="warGraphic">
