box sizing and additional text for the site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
             <h1 class="title">
-                TraumaTron
+                TraumaTron's Best Practices for all your meditation needs!!!
             </h1>
     </header>
     <main class="content">
@@ -23,9 +23,10 @@
         </section>
         <section class="centerImage">
             <div class="groovy">
+                <div class= "textSize"><h3>IF YOU WANT TO LOOK LIKE THIS!! ------></h3></div>
             <img class="resize" src="https://i.pinimg.com/originals/43/7c/cd/437ccd700660fc3ac5a164dffb4c290f.jpg" alt="Groovy person">
                 <article class="links">
-                    <h5 class= "tastyTitle"><em>Here are some tasty jams to get your mind right!</em></h5>
+                    <h2 class= "tastyTitle"><em>Get in here and listen to some tasty jams to get your mind right!</em></h2>
                         <ol class="tastyJams">
                           <a href="https://www.youtube.com/watch?v=Az4UgLwAw4c" target="_blank" rel="noopener noreferrer"> Superior Meditation!</a><br>
                           <a href="https://www.youtube.com/watch?v=xHE5g9YgkFg" target="_blank" rel="noopener noreferrer"> Stop Mental bReAkDoWnZ!</a><br>
@@ -49,7 +50,7 @@
                     <li>Always choose the most crowded place.</li>
                     <li>The best time is usually right after your kids come home from school or just wake up from a nap.</li>
                     <li>Jeans are absolutely mandatory to find the best position to sit in.</li>
-                    <li>Eat a huge lunch from Taco Bell and a large coffee from Dunkin Donuts.</li>
+                    <li>Eat a huge lunch from Taco Bell and a large coffee from Dunkin Donuts to feel the Zen.</li>
                 </ul>
 
             </div>
